# kgenealogic

./: LICENSE  README.md  pyproject.toml
examples/: config.yaml
kgenealogic/: __init__.py  __main__.py  cache.py  cli.py  cluster.py  data.py  files.py  genetmap.csv  schema.py
kgenealogic/sql/: init_cache.sql  init_schema.sql  invalidate_cache.sql
